added deletion and inorder traversal, fixed quite a few memory leaks in RBT

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,15 @@
-CFLAGS = -Wall -std=c11
-OBJECTS = Test.o
+CFLAGS = -Wall -g -std=c11 -fsanitize=address -fsanitize=leak -fno-omit-frame-pointer
+CFLAGS1 = -Wall -g -std=c11 -fsanitize=address
+OBJECTS = Test_bst.o
 
-test: $(OBJECTS)
-	clang -o test $(OBJECTS) $(CFLAGS)
-Test.o: Test.c bst.h
-	clang -c Test.c $(CFLAGS)
+test_bst: $(OBJECTS)
+	clang -o test_bst $(OBJECTS) $(CFLAGS1)
+Test_bst.o: Test_bst.c bst.h
+	clang -c Test_bst.c $(CFLAGS)
+
+test_rbt: Test_rbt.o
+	clang -o test_rbt Test_rbt.o $(CFLAGS1)
+Test_rbt.o: Test_rbt.c rbt.h
+	clang -c Test_rbt.c $(CFLAGS)
+clean:
+	rm test_* *.o
